--- a/stuterngit.html
+++ b/stuterngit.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>PROJECT</title>
 </head>
 <body>
-    <h1>This is my first project</h1>
-    <p>Thank you for your cooperation</p>
+    <p>My Second Project</p>
 </body>
 </html>
