I was on my way to the church when I met her

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is my first project</h1>
     <p>Thank you for your cooperation</p>
+    <p style ="color:blue;">I was on my way to the church when I met her</p>
 </body>
 </html>
