--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Project</title>
 </head>
 <body>
-    <h1>This is my first project</h1>
+    <h1>This is my first project, I love it.</h1>
     <p>Thank you for your cooperation</p>
     <p style ="color:blue;">I was on my way to the church when I met her</p>
 </body>
